Adjusted PDF link for GitHub pages

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <a href="http://www.amazon.com/Quantum-Ethics-Spinozist-Interpretation-Theory/dp/1481811703/">
                     <img src="images/pictures/One_Loop_QED_Vacuum_Energy_Diagram.jpg" width="250" height="325" border="0" alt="" title="One-Loop QED Vacuum Energy Diagram">
                 </a>
-                <p><a href="/Quantum%20Ethics.php">» View as PDF</a></p>
+                <p><a href="quantum-ethics.pdf">» View as PDF</a></p>
                 <p><a href="http://www.amazon.com/Quantum-Ethics-Spinozist-Interpretation-Theory/dp/1481811703/">» Order on Amazon</a></p>
                 <p><a href="https://github.com/quantum-ethics/quantum-ethics">» Contribute on GitHub</a></p><br>
             </div>
@@ -109,7 +109,7 @@ In the meanwhile, this almost sounds trivial to me, so I guess I’m eventually 
 This alone would be a revolution in this field of science.
 But I’m not interested in pretending to have discovered deep truths about “the inmost force which binds the world”, to speak with Goethe; I just wanted to show that it is possible, and actually quite easy, to give Quantum Field Theory a form and an interpretation which make it a formally and conceptually closed theory, capable of giving a well-defined answer to any question we can ask it – even if we may eventually find out that it wasn’t the right one.
 This interpretation challenges all existing ones insofar as it is the first time that this degree of conceptual precision and formal well-definedness has been reached, and I hope this will be motivation enough for others to work out alternative interpretations and achieve the same level of quality – so that we can finally know what Quantum Theory is actually about...
-            <p><br><a href="/Quantum%20Ethics.php">» Read full PDF</a></p>
+            <p><br><a href="quantum-ethics.pdf">» Read full PDF</a></p>
             <h4>About the Author</h4>
             <p>Sébastien Fauvel, born 1983, graduated from the Ecole Normale Supérieure of Paris in Physics and Comparative Literature. He has been working as a Consultant, Software and Web Developer in Lyon, Freiburg and Basel.</p>
         </div>
