Added animated book cover

--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
     <head>
@@ -24,12 +23,10 @@
         </div>
         <div id="abstract">
             <div id="download">
-                <a href="http://www.amazon.com/Quantum-Ethics-Spinozist-Interpretation-Theory/dp/1481811703/">
-                    <img src="images/pictures/One_Loop_QED_Vacuum_Energy_Diagram.jpg" width="250" height="325" border="0" alt="" title="One-Loop QED Vacuum Energy Diagram">
+                <img src="images/pictures/look_inside.png" class="look-inside">
+                <a href="http://www.amazon.com/Quantum-Ethics-Spinozist-Interpretation-Theory/dp/1481811703/" class="book-cover">
+                    <img src="images/pictures/cover.jpg" width="230" height="346" border="0" alt="" title="One-Loop QED Vacuum Energy Diagram">
                 </a>
-                <p><a href="quantum-ethics.pdf">» View as PDF</a></p>
-                <p><a href="http://www.amazon.com/Quantum-Ethics-Spinozist-Interpretation-Theory/dp/1481811703/">» Order on Amazon</a></p>
-                <p><a href="https://github.com/quantum-ethics/quantum-ethics">» Contribute on GitHub</a></p><br>
             </div>
             			<h4>History of this book</h4>
 			<p>How would Quantum Field Theory look like if we stopped for a while developing it further as if it were the draft of a yet-to-be-discovered Theory of Everything, and just started to reformulate the Standard Model as a mathematically and conceptually coherent physical theory? And what would such a theory tell us about the world and about ourselves, which remains hidden in the ill-defined formulations we’ve grown up with through the last decades? As I started back in 2010 to reflect on these questions, I didn’t have yet a clear vision of what this work would lead me to.</p>
