--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div id="download">
                 <img src="images/pictures/look_inside.png" class="look-inside">
                 <a href="http://www.amazon.com/Quantum-Ethics-Spinozist-Interpretation-Theory/dp/1481811703/" class="book-cover">
-                    <img src="images/pictures/cover.jpg" width="230" height="346" border="0" alt="" title="One-Loop QED Vacuum Energy Diagram">
+                    <img src="images/pictures/cover.jpg" width="230" height="346" border="0" alt="Quantum Ethics: A Spinozist Interpretation of Quantum Field Theory, by Sébastien Fauvel">
                 </a>
             </div>
             			<h4>History of this book</h4>
