Added meta tags

--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
-        <meta http-equiv="content-type" content="text/html;charset=UTF-8">
-        <meta name="language" content="english">
-        <meta name="description" content="Quantum Ethics: A Spinozist Interpretation of Quantum Field Theory, by Sébastien Fauvel">
+        <meta charset="utf-8">
+        <link href="style.css" rel="stylesheet">
         <title>Quantum Ethics: A Spinozist Interpretation of Quantum Field Theory</title>
-        <link href="style.css" rel="stylesheet" type="text/css">
+        <meta name="description" content="Quantum Ethics: A Spinozist Interpretation of Quantum Field Theory, by Sébastien Fauvel">
+        <meta property="og:type" content="website">
+        <meta property="og:title" content="Quantum Ethics: A Spinozist Interpretation of Quantum Field Theory">
+        <meta property="og:image" content="images/pictures/cover.jpg">
+        <meta property="og:site_name" content="Quantum Ethics">
+        <meta property="og:description" content="Quantum Ethics: A Spinozist Interpretation of Quantum Field Theory, by Sébastien Fauvel">
         <script>
 			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 				(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
